# model

./: .gitignore  Dockerfile  PRE_SUBMISSION_REPORT.json  PRE_SUBMISSION_REPORT.md  README.md  __init__.py  client.py  grader.py  inference.py  models.py  openenv.yaml  pentest_report.json  pyproject.toml  requirements.txt  task_validation.py
server/: app.py  environment.py
